--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html ng-app="clipartLibrary">
+<html>
 	<head>
 		 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -9,7 +9,7 @@
 
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen" />
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" media="screen" />    
-    <link href="assets/css/library-three-columns.css" rel="stylesheet" media="screen" >
+    <link href="assets/css/three-columns.css" rel="stylesheet" media="screen" >
 <link href="assets/css/home-theme.css" rel="stylesheet" media="screen"/>
     <!--[if lt IE 9]>
       <script src="js/respond.min.js"></script>
@@ -26,12 +26,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="publish.html">Publish</a></li>
             <li><a href="compare.html">Compare</a></li>
             <li><a href="seed.html">Seed</a></li>
             <li><a href="reports.html">Reports</a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <li class="active"><a href="admin.html">Admin</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Misc. <span class="caret"></span></a>
               <ul class="dropdown-menu">                
@@ -53,43 +53,16 @@
     </nav>
   	
 
-  	<div class="columnsContainer" ng-controller="DesignController">
+  	<div class="columnsContainer">
 
       <div class="sideNav">
-        <h4>Categories</h4>
+        <h2>Menu</h2>
 
-        <div >       
-
-          <button ng-click="getCategories(designId)" type="button" class="btn btn-sm btn-primary">Refresh</button>
-
-          <ul>
-            <li ng-repeat="category in categories">
-              <span><a ng-click="getImageList(designId, category.categoryId)">{{category.categoryName}}</a></span>              
-            </li>
-          </ul>
-
-          <ul>
-            <li ng-repeat="image in images">
-              <span>{{image.imageName}}</span>
-            </li>
-          </ul>
-
-        </div>
-
+        <p>menu items here</p>
       </div>
 
 	  	<div class="leftColumn">
 	  		<h2>Left Column (fluid)</h2>
-
-        <div>
-          <ul>
-            <li ng-repeat="image in images">
-              <span>{{image.imageName}}</span>
-            </li>
-          </ul>
-        </div>
-
-        <img src="http://images.cdn.yearbookavenue.jostens.com/services/getimage?locator=TRY1-9-128166993&quality=thumbnail">
 
 	  		<p>Bacon ipsum dolor sit amet capicola ball tip beef ribs leberkas, turkey biltong salami shoulder ribeye. Leberkas chuck cow andouille kevin ribeye pork strip steak pork chop beef ribs beef ball tip corned beef. Leberkas prosciutto brisket, short ribs salami cow sirloin chicken. Bacon pork belly bresaola tenderloin biltong leberkas. Strip steak beef leberkas sirloin, venison turkey hamburger kevin. Drumstick chicken ground round t-bone flank fatback jerky ball tip. Jerky ribeye sirloin t-bone.</p>
 
@@ -110,8 +83,22 @@
 
   	</div>
 
+    <footer>
+      <p><a href="#">Contact Us</a> | <a href="#">Sitemap</a> | <a href="#">Privacy Policy</a></p>
+      <p>&copy;2014 Copyright info here...</p>
+    </footer>
 
-  <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js"></script>
+<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-621676-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+      <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.js"></script>
 
