--- a/reports.html
+++ b/reports.html
@@ -27,7 +27,11 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
+            <li><a href="publish.html">Publish</a></li>
+            <li><a href="compare.html">Compare</a></li>
+            <li><a href="seed.html">Seed</a></li>
             <li class="active"><a href="reports.html">Reports</a></li>
+            <li><a href="admin.html">Admin</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Misc. <span class="caret"></span></a>
               <ul class="dropdown-menu">                
