--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="assets/css/library-three-columns.css" rel="stylesheet" media="screen" >
     <link href="assets/css/home-theme.css" rel="stylesheet" media="screen"/>
     <link href="assets/css/home-gallery.css" rel="stylesheet" media="screen" />
+    <link rel="stylesheet" href="assets/css/angular-ui-tree.css">
+    <link rel="stylesheet" href="assets/css/demo.css">
     <!--[if lt IE 9]>
       <script src="js/respond.min.js"></script>
     <![endif]-->
@@ -47,6 +49,7 @@
                 <li><a href="bootstrap.html">bootstrap</a></li>
                 <li><a href="dragndrop.html">dragndrop</a></li>
                 <li><a href="gallery.html">gallery</a></li>
+                <li><a href="#/uitree">UI-Tree</a></li>
               </ul>
             </li>
           </ul>
@@ -65,6 +68,7 @@
 
   <script src="app/app.module.js"></script>
   <script src="app/app.controllers.js"></script>
+  <script src="assets/js/angular-ui-tree.js"></script>
           
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js></script>
