--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
     <title>ClipartLibrary - Home - Three Columns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen" />
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" media="screen" />    
+    <link href="assets/css/bootstrap/3.3.1/bootstrap.min.css" rel="stylesheet" media="screen" />
+    <link href="assets/css/bootstrap/3.3.1/bootstrap-theme.min.css" rel="stylesheet" media="screen" />    
     <link href="assets/css/library-three-columns.css" rel="stylesheet" media="screen" >
     <link href="assets/css/home-theme.css" rel="stylesheet" media="screen"/>
     <link href="assets/css/home-gallery.css" rel="stylesheet" media="screen" />
@@ -60,7 +59,7 @@
   <ng-view></ng-view>
   <!-- <div ng-view></div>
  -->
-  <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js"></script>
+  <script src="assets/js/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
 
