editable list nodes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <li><a href="dragndrop.html">dragndrop</a></li>
                 <li><a href="gallery.html">gallery</a></li>
                 <li><a href="#/uitree">UI-Tree</a></li>
+                <li><a href="connected-lists.html">Connected Lists</a></li>
+                <li><a href="editable-node-list.html">Editable Node List</a></li>
               </ul>
             </li>
           </ul>
