--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
   <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 
   <script src="app/app.module.js"></script>
+  <script src="app/app.routes.js"></script>
   <script src="app/components/library/libraryController.js"></script>
   <script src="assets/js/angular-ui-tree.js"></script>
   <script src="assets/js/ui-bootstrap-tpls-0.13.4.js"></script>
+  <script src="assets/js/angular-ui-image.js"></script>
           
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js></script>
