--- a/app/shared/libraryImage.html
+++ b/app/shared/libraryImage.html
@@ -1,3 +1,3 @@
 <img src="{{info.src}}" width="100px;">
 <div>{{info.name}}</div>
-<button ng-click="openModalAlert(this, 'sm')" type="button" class="btn btn-sm btn-primary">detail</button>
+<button ng-click="detailHandler(this)" type="button" class="btn btn-sm btn-primary">see this?</button>
