image detail directive

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <script src="assets/js/angular-ui-tree.js"></script>
   <script src="assets/js/ui-bootstrap-tpls-0.13.4.js"></script>
   <script src="assets/js/angular-ui-image.js"></script>
+  <script src="assets/js/angular-ui-image-detail.js"></script>
           
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js></script>
