--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/angular-ui-tree.css">
     <link rel="stylesheet" href="assets/css/demo.css">
     <link rel="stylesheet" href="assets/css/tree.css">
+    <link rel="stylesheet" href="assets/css/imageDetail.css">
     <!--[if lt IE 9]>
       <script src="js/respond.min.js"></script>
     <![endif]-->
