--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
   <script src="assets/js/ui-bootstrap-tpls-0.13.4.js"></script>
   <script src="assets/js/angular-ui-image.js"></script>
   <script src="assets/js/angular-ui-image-detail.js"></script>
+  <!--<script src="assets/ng-file-upload-shim.js"></script>--> <!-- for no html5 browsers support -->
+  <script src="assets/js/ng-file-upload.js"></script>
           
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js></script>
