--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li><a href="connected-lists.html">Connected Lists</a></li>
                 <li><a href="editable-node-list.html">Editable Node List</a></li>
                 <li><a href="angular-uibootstrap-alert.html">Angular UIBootstrap Alert</a></li>
+                <li><a href="simple-form.html">simple form</a></li>
               </ul>
             </li>
           </ul>
@@ -66,9 +67,9 @@
   <!-- <div ng-view></div> -->
 
   <script src="assets/js/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.0/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.0/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.0/angular-animate.js"></script>
 
   <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 
