image copy for dragging

--- a/app/shared/libraryImage.html
+++ b/app/shared/libraryImage.html
@@ -1,3 +1,3 @@
 <img src="{{info.src}}">
-<!-- <div>{{info.name}}</div>
-<button ng-click="detailHandler(this)" type="button" class="btn btn-sm btn-primary">see this?</button> -->
+<div class="titleBox">{{info.name}}</div>
+<!--<button ng-click="detailHandler(this)" type="button" class="btn btn-sm btn-primary">see this?</button> -->
