--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="assets/js/angular-ui-tree.js"></script>
   <script src="assets/js/ui-bootstrap-tpls-0.13.4.js"></script>
   <script src="assets/js/angular-ui-image.js"></script>
+  <script src="assets/js/angular-ui-image-copy.js"></script>
   <script src="assets/js/angular-ui-image-detail.js"></script>
   <!--<script src="assets/ng-file-upload-shim.js"></script>--> <!-- for no html5 browsers support -->
   <script src="assets/js/ng-file-upload.js"></script>
