--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <script src="app/app.module.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/components/library/libraryController.js"></script>
+  <script src="app/components/admin/adminController.js"></script>
   <script src="assets/js/angular-ui-tree.js"></script>
   <script src="assets/js/ui-bootstrap-tpls-0.13.4.js"></script>
   <script src="assets/js/angular-ui-image.js"></script>
