--- a/index3.html
+++ b/index3.html
@@ -73,7 +73,11 @@
       <button type="submit">Login</button>
     </form>
   </div>
-  <ng-view></ng-view>
+  
+  <div ui-view></div>
+    <!-- We'll also add some navigation: -->
+    <a ui-sref="state1">State 1</a>
+    <a ui-sref="state2">State 2</a>
 
   <!-- <div ng-view></div> -->
 
